# jamegames

./: .clang-format  .gitignore  Readme.MD  format_all.sh
.devcontainer/: Dockerfile  devcontainer.json
cascadia/: CMakeLists.txt  build_all.sh
cascadia/src/: Biome.h  BiomeUtilities.cpp  BiomeUtilities.h  Board.cpp  Board.h  Game.cpp  Game.h  GameState.h  Log.h  Player.cpp  Player.h  Tile.cpp  Tile.h  WildlifeToken.cpp  WildlifeToken.h  WildlifeType.h  WildlifeTypeUtilities.cpp  WildlifeTypeUtilities.h
cascadia/src/main/: main.cpp
